@@ -1,0 +1,47 @@
+#!/bin/sh
+# Begin $rc_base/init.d/kerberos
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+        start)  
+                echo "Starting Kerberos Authentication..."
+                loadproc krb5kdc
+                echo "Starting Kerberos Admin Daemon..."
+                loadproc kadmind
+                ;;
+
+        stop)
+                echo "Stopping Kerberos Authentication..."
+                killproc krb5kdc
+                echo "Stopping Kerberos Admin Daemon..."
+                killproc kadmind
+                ;;
+
+        reload)
+                echo "Reloading Kerberos Authentication..."
+                reloadproc krb5kdc
+                echo "Reloading Kerberos Admin Daemon..."
+                reloadproc kadmind
+                ;;
+
+        restart)
+                $0 stop
+                sleep 1
+                $0 start
+                ;;
+
+        status)
+                statusproc
+                ;;
+
+        *)
+                echo "Usage: $0 {start|stop|reload|restart|status}"
+                exit 1
+                ;;
+esac
+# End $rc_base/init.d/kerberos
